# FILEPOINTBOT

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260422_0001_initial.py
app/: main.py
app/bot/: setup.py
app/bot/handlers/: admin.py  user.py
app/bot/keyboards/: admin.py  common.py
app/bot/middlewares/: container.py
app/bot/states/: admin.py  checkout.py
app/config/: settings.py
app/db/: base.py  session.py
app/db/models/: __init__.py  base.py  order.py  payment.py  product.py  user.py
app/services/: admin.py  catalog.py  checkout.py  container.py  file_storage.py  fulfillment.py  users.py
app/services/payments/: base.py
app/utils/: formatting.py
filepoint_tgbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
