[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filepoint-tgbot"
version = "0.1.0"
description = "MVP Telegram bot for selling digital files, guides, and services"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.7.0,<4.0.0",
  "SQLAlchemy>=2.0.30,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "alembic>=1.13.1,<2.0.0",
  "redis>=5.0.4,<6.0.0",
  "pydantic-settings>=2.3.4,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "psycopg[binary]>=3.1.19,<4.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
